<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	 
    


<EditText
    android:id="@+id/edit_name"
    android:layout_height="wrap_content"
    android:hint="@string/feedbackname"
    android:inputType="textPersonName"
    android:layout_marginTop="10dp"
    android:layout_width="fill_parent">
</EditText>

<EditText
    android:id="@+id/edit_email"
    android:layout_height="wrap_content"
    android:hint="@string/feedbackemail"
    android:inputType="textEmailAddress"
    android:layout_width="fill_parent"> 
</EditText>

<EditText
    android:id="@+id/edit_subject"
    android:layout_height="wrap_content"
    android:hint="@string/feedbacksubject"
    android:inputType="textEmailSubject"
    android:layout_width="fill_parent">
</EditText>

<Spinner
    android:id="@+id/spinner_feedbackType"
    android:layout_height="wrap_content"
    android:prompt="@string/feedbacktype"
    android:layout_width="fill_parent"
   >
</Spinner>

<EditText
    android:id="@+id/edit_feedbackBody"
    android:layout_height="wrap_content"
    android:hint="@string/feedbackbody"
    android:inputType="textMultiLine"
    android:lines="5"
    android:layout_width="fill_parent">
</EditText>

<CheckBox
    android:id="@+id/checkbox_response"
    android:layout_height="wrap_content"
    android:text="@string/feedbackresponse"
    android:layout_width="fill_parent">
</CheckBox>

<Button
    android:id="@+id/btn_sendFeedback"
    android:layout_height="wrap_content"
    android:text="@string/feedbackbutton"
    android:onClick="sendFeedback"
    style="@style/ButtonStyle"
    android:layout_width="130dp"
    android:layout_marginBottom="10dp"
>
</Button>

 
</LinearLayout>